Fix spacing in display of arming disable flags (#4389)

--- a/src/css/tabs/setup.less
+++ b/src/css/tabs/setup.less
@@ -165,5 +165,5 @@
     bottom: 20px;
 }
 .disarm-flag {
-    padding-left: 5px;
+    padding-right: 5px;
 }
